--- a/lab06/views/prod/list.ejs
+++ b/lab06/views/prod/list.ejs
@@ -12,9 +12,9 @@
     </head>
     <body>
 
-        <h1>Loja - Produtos</h1>
+        <h1>Express - Basic Auth</h1>
         User: <%= loggedUser.name %>
-        <h2>Produtos cadastrados</h2>
+        <h2>Product List</h2>
         <table>
             <thead>
                 <tr>
@@ -39,6 +39,5 @@
                 <% } %> 
             </tbody>
         </table>
-        <a href="http://localhost:3000/produto/produto-novo">cadastrar novo produto</a>
     </body>
 </html>
