--- a/lab06 example/views/category/list.ejs
+++ b/lab06 example/views/category/list.ejs
@@ -38,6 +38,6 @@
           </table>
 
     </div>
-    <button><a href="http://localhost:3000/home">home</a></button>
+    <button><a href="http://localhost:3000/list">home</a></button>
 </body>
 </html>
