--- a/lab06 example/views/category/new.ejs
+++ b/lab06 example/views/category/new.ejs
@@ -30,7 +30,7 @@
     
 
 
-    <button><a href="http://localhost:3000/home">home</a></button>
+    <button><a href="http://localhost:3000/list">home</a></button>
 </body>
 
 </html>
