--- a/lab06 example/views/prod/new.ejs
+++ b/lab06 example/views/prod/new.ejs
@@ -25,7 +25,7 @@
             <input type="submit" value="Save"/>
         </form> 
 
-        <button><a href="http://localhost:3000/home">home</a></button>
+        <button><a href="http://localhost:3000/list">home</a></button>
         </div>
 
     </body>
