--- a/lab06 example/views/Produto/Produto-novo.ejs
+++ b/lab06 example/views/Produto/Produto-novo.ejs
@@ -9,7 +9,7 @@
         <h1>Express - Basic Auth</h1>
         User: <%= loggedUser.username %>
         <h2>New Product</h2>
-        <form action="/prod/new" method="POST">
+        <form action="/Produto/Produto-novo" method="POST">
             Name: <input type="text" name="name"/><br/>
             Price: <input type="number" name="price"/><br/>
             description: <input type="text" name="description"/><br>
@@ -25,7 +25,7 @@
             <input type="submit" value="Save"/>
         </form> 
 
-        <button><a href="http://localhost:3000/list">home</a></button>
+        <button><a href="http://localhost:3000">home</a></button>
         </div>
 
     </body>
