--- a/lab06 example/views/Produto/Meus-produtos.ejs
+++ b/lab06 example/views/Produto/Meus-produtos.ejs
@@ -40,7 +40,7 @@
             </table> 
         </div>
 
-        <button><a href="http://localhost:3000/list">home</a></button>
+        <button><a href="http://localhost:3000">home</a></button>
        
     </body>
 </html>
