--- a/lab06 example/views/list.ejs
+++ b/lab06 example/views/list.ejs
@@ -9,11 +9,10 @@
         <h1>Raiz</h1>
         User: <%= loggedUser.username %> <br> <br>
 
-        <a href="/prod/new">Add Product</a><br/> 
-    <a href="list">List Products</a> <br>
+        <a href="/Produto/Produto-novo">Add Product</a><br/> 
     <a href="/category/new">Add category</a> <br>
     <a href="/category/list">List Category</a>
-    <a href="/prod/myProd">Meus Produtos</a>
+    <a href="/Produto/Meus-produtos">Meus Produtos</a>
 
 
         <h2>Product List</h2>
