css e outas coisas

--- a/lab06 example/views/Produto/Meus-produtos.ejs
+++ b/lab06 example/views/Produto/Meus-produtos.ejs
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-        <h1>Express - Basic Auth</h1>
+        <h1>user: <%= loggedUser.username %></h1>
         <h2>Product List</h2>
         <div>
             <table>
@@ -40,7 +40,8 @@
             </table> 
         </div>
 
-        <button><a href="http://localhost:3000">home</a></button>
+        <a href="http://localhost:3000">home</a>
+
        
     </body>
 </html>
