--- a/lab06 example/views/category/new.ejs
+++ b/lab06 example/views/category/new.ejs
@@ -22,7 +22,7 @@
             <label for="value">Value:</label>
             <input type="text" name="value">
   
-            <button type="submit">Salvar</button>
+            <input type="submit" value="Save" />
         </form>
 
 
@@ -30,7 +30,8 @@
     
 
 
-    <button><a href="http://localhost:3000">home</a></button>
+    <a href="http://localhost:3000">home</a>
+
 </body>
 
 </html>
