--- a/Alugueis de carro-MPA/views/loja/aluguel.ejs
+++ b/Alugueis de carro-MPA/views/loja/aluguel.ejs
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluguel de Carros</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    
+    <div>
+        <nav>
+            <ul>
+                <li> <a href="/aluguel"> Meus Alugueis</a></li>
+                <li> <a href="/loja"> Minha loja</a></li>
+                <li> <a href="/conta"> Minha conta</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
