login com os dados do mongo e ajustes

--- a/Alugueis de Carros-MPA/views/admin/loja.ejs
+++ b/Alugueis de Carros-MPA/views/admin/loja.ejs
@@ -62,9 +62,9 @@
                                 <p> função editar</p>
                             </td>
                             <td>
-                                <p><a href="/deletar-carro?_id=<%= carros[i]._id %>"
-                                    onclick="return confirm('Tem certeza que deseja excluir esta categoria?')">
-                                   Excluir</p>
+                               <a href="/deletar-carro?_id=<%= carros[i]._id %>" onclick="return confirm('Tem certeza que deseja excluir esse veiculo?')">Excluir</a>
+                                    
+                                  
                             </td>
                             
                         </tr>
