--- a/Alugueis de Carros-MPA/views/index.ejs
+++ b/Alugueis de Carros-MPA/views/index.ejs
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Bem vindo!</h1>
+    <div>
+        <a href="user/signin">Login</a>
+        <a href="user/signup">Cadastro</a>
+        <a href="admin/add-carro">admaddcarro</a>
+        <a href="admin/loja">admloja</a>
+        <a href="admin/signin">admlogin</a>
+    </div>
+
     <table>
         <thead>
             <tr>
@@ -36,11 +44,5 @@
             <% } %>
         </tbody>
     </table>
-    <div>
-        <a href="user/signin">Signin</a>
-        <a href="user/signup">Signup</a>
-        <a href="admin/add-carro">admaddcarro</a>
-        <a href="admin/loja">admloja</a>
-    </div>
 </body>
 </html>
