--- a/Alugueis de Carros-MPA/views/loja/alugar.ejs
+++ b/Alugueis de Carros-MPA/views/loja/alugar.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div>
+    <div class="menu-container">
         <nav>
             <ul>
                 <li> <a href="/aluguel"> Meus Alugueis</a></li>
