--- a/Alugueis de Carros-MPA/public/style.css
+++ b/Alugueis de Carros-MPA/public/style.css
@@ -105,3 +105,25 @@ body {
   .error{
     color: red;
   }
+
+  .menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    z-index: 999;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  padding: 1rem;
+}
+a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+  margin-right: 1rem;
+}
