--- a/Alugueis de Carros-MPA/views/loja/alugar.ejs
+++ b/Alugueis de Carros-MPA/views/loja/alugar.ejs
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="menu-container">
-        <nav>
+    <header class="header-topo">
+        <div class="header-nav">
             <ul>
-                <li> <a href="/aluguel"> Meus Alugueis</a></li>
-                <li> <a href="/loja"> Minha loja</a></li>
-                <li> <a href="/conta"> Minha conta</a></li>
+                <li><a href="user/signin">Login</a></li>
+                <li><a href="user/signup">Cadastro</a></li>
+                <li><a href="admin/add-carro">admaddcarro</a></li>
+                <li><a href="admin/loja">admloja</a></li>
+                <li><a href="admin/signin">admlogin</a></li>
             </ul>
-        </nav>
-    </div>
+        </div>
+    </header>
 </body>
 </html>
