edição de dados do carro

--- a/Alugueis de Carros-MPA/views/admin/add-carro.ejs
+++ b/Alugueis de Carros-MPA/views/admin/add-carro.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <form action="/add-carro" method="post">
+    <form class="form-container" action="/add-carro" method="post">
 
        imagem: <input type="url" name="imagem"> <br>
        nome: <input type="text" name="nome" > <br>
