--- a/Alugueis de Carros-MPA/views/loja/loja.ejs
+++ b/Alugueis de Carros-MPA/views/loja/loja.ejs
@@ -13,15 +13,13 @@
     <header class="header-topo">
         <div class="header-nav">
             <ul>
-                <li><a href="user/signin">Login</a></li>
-                <li><a href="user/signup">Cadastro</a></li>
-                <li><a href="admin/add-carro">admaddcarro</a></li>
-                <li><a href="admin/loja">admloja</a></li>
-                <li><a href="admin/signin">admlogin</a></li>
+                <li><a href="loja">Loja</a></li>
+                <li><a href="loja/aluguel">Meus Alugueis</a></li>
+                <li><a href="loja/conta">Minha conta</a></li>
             </ul>
         </div>
     </header>
-    
+    <br><br><br><br><br>
     <form action="/busca" method="post">
         busca:<input type="text" name="busca">
     </form>
