--- a/Alugueis de Carros-MPA/views/user/signup.ejs
+++ b/Alugueis de Carros-MPA/views/user/signup.ejs
@@ -22,7 +22,7 @@
 
 <body>
 
-        <form action="/user/signup" method="post">
+        <form class="form-container" action="/user/signup" method="post">
 
             Name: <input type="text" name="name"  required/><br />
             Data de nascimento: <input type="date" name="dataNascimento"  required/><br />
