--- a/Alugueis de Carros-MPA/public/style.css
+++ b/Alugueis de Carros-MPA/public/style.css
@@ -1,3 +1,4 @@
+/* Estilos para o cabeçalho */
 .header-topo {
   position: fixed;
   top: 0;
@@ -25,6 +26,8 @@
 .header-nav li:last-child {
   margin-right: 0;
 }
+
+/* Estilos para a grade de itens */
 .grid-container {
   margin-top: 40px;
   display: grid;
@@ -62,19 +65,53 @@
   background-color: #2980b9;
 }
 
-
 /* Estilizando os links como botões */
-.header-nav a {
+.header-nav a,
+.form-container input[type="submit"] {
   display: inline-block;
   padding: 10px 20px;
   background-color: #3498db; /* Cor azul moderna */
   color: #fff;
   text-decoration: none;
   border: none;
-  border-radius: 0;
+  border-radius: 4px;
   box-shadow: none;
 }
 
-.header-nav a:hover {
+.header-nav a:hover,
+.form-container input[type="submit"]:hover {
   background-color: #2980b9; /* Cor azul mais escura quando o link é hover */
+}
+
+/* Estilos para o formulário */
+.form-container {
+  margin: 40px auto;
+  max-width: 400px;
+  padding: 20px;
+  background-color: #f1f1f1;
+}
+
+.form-container input[type="url"],
+.form-container input[type="text"],
+.form-container input[type="number"],
+.form-container input[type="email"],
+.form-container input[type="password"],
+.form-container input[type="tel"],
+.form-container input[type="date"],
+.form-container select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.form-container .error {
+  color: red;
+  margin-top: 10px;
+}
+
+.form-container p {
+  margin-bottom: 10px;
 }
