--- a/Alugueis de Carros-MPA/views/admin/signin.ejs
+++ b/Alugueis de Carros-MPA/views/admin/signin.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <form action="/admin/signin" method="post">
+    <form class="form-container" action="/admin/signin" method="post">
         Email: <input type="email" name="email" required />
         Senha: <input type="password" name="password" required />
         <input type="submit" value="Login" />
