--- a/Alugueis de Carros-MPA/views/admin/loja.ejs
+++ b/Alugueis de Carros-MPA/views/admin/loja.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluguel de Carros</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header-topo">
@@ -14,6 +15,7 @@
                 <li><a href="aluguel">admaalugar</a></li>
                 <li><a href="/admin/loja">admloja</a></li>
                 <li><button><a href="add-carro">add carro</a></button></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </header>
