--- a/Alugueis de Carros-MPA/views/loja/loja.ejs
+++ b/Alugueis de Carros-MPA/views/loja/loja.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluguel de Carros</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -16,6 +17,7 @@
                 <li><a href="loja">Loja</a></li>
                 <li><a href="loja/aluguel">Meus Alugueis</a></li>
                 <li><a href="loja/conta">Minha conta</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </header>
