--- a/Alugueis de Carros-MPA/views/user/signup.ejs
+++ b/Alugueis de Carros-MPA/views/user/signup.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluguel de Carros</title>
     <link rel="stylesheet" href="/style.css">
-
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <script>
         function check(input) {
             if (input.value !== document.getElementById('password').value) {
@@ -23,7 +23,7 @@
 <body>
 
         <form class="form-container" action="/user/signup" method="post">
-
+            <h5>CADASTRO USUARIO</h5>
             Name: <input type="text" name="name"  required/><br />
             Data de nascimento: <input type="date" name="dataNascimento"  required/><br />
             Genero: <select name="genero"  required> <br>
