--- a/Alugueis de Carros-MPA/views/admin/add-carro.ejs
+++ b/Alugueis de Carros-MPA/views/admin/add-carro.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluguel de Carros</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <form class="form-container" action="/add-carro" method="post">
