--- a/Alugueis de Carros-MPA/views/admin/carro-editar.ejs
+++ b/Alugueis de Carros-MPA/views/admin/carro-editar.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluguel de Carros</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <form class="form-container" action="/admin/editar-carro/<%= carros.nome %>" method="post">
