--- a/Alugueis de Carros-MPA/views/index.ejs
+++ b/Alugueis de Carros-MPA/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluguel de Carros</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -14,10 +15,6 @@
             <ul>
                 <li><a href="user/signin">Login</a></li>
                 <li><a href="user/signup">Cadastro</a></li>
-                <li><a href="admin/add-carro">admaddcarro</a></li>
-                <li><a href="admin/loja">admloja</a></li>
-                <li><a href="admin/signin">admlogin</a></li>
-                <li><a href="loja/loja">loja cliente k</a></li>
             </ul>
         </div>
     </header>
