--- a/Alugueis de Carros-MPA/views/loja/conta.ejs
+++ b/Alugueis de Carros-MPA/views/loja/conta.ejs
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div>
-        <nav>
+    <div class="header-topo">
+        <nav class="header-nav">
             <ul>
                 <li> <a href="/aluguel"> Meus Alugueis</a></li>
                 <li> <a href="/loja"> Minha loja</a></li>
