--- a/Alugueis de Carros-MPA/views/loja/aluguel.ejs
+++ b/Alugueis de Carros-MPA/views/loja/aluguel.ejs
@@ -32,6 +32,7 @@
                 <p>Data de Início: <%= aluguel[i].dataInicio %></p>
                 <p>Data de Fim: <%= aluguel[i].dataFim %></p>
                 <p>Valor Total: <%= aluguel[i].valorTotal %></p>
+                <p>Forma de Pagamento: <%= aluguel[i].formaPagamento %></p>
             </div>
             <% } %>
         </div>
